tests/fail/if-condition-type.virtue
if "true"
    print "Hello"

# error: type error
#  --> test.virtue:1:4
#    |
#  1 | if "true"
#    |    ^^^^^^ expected bool, found string
#
